# seeder-flet

./: LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: codeql.yml
lib/components/appbar/: __init__.py
lib/functions/: boyer_moore_string_search.py  difference_between_strings.py
lib/screens/: login.py
lib/views/: __init__.py  login.py  upload.py
